Configure About Me section.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Edward Lee</h1>
+							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or creating something cool, I'm a happy programmer. Because in the end, it's the ability to translate an idea straight from your imagination into reality that makes all the difference for me.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="./assets/other/resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</div>
 					</section>
