Add text content for Projects.

--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<h2 class="projects">Projects</h2>
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>CatTube</h2>
+									<p>A clone of YouTube focused on providing quality cat videos!</p>
+									<ul>
+										<li>Automatically screenshots uploaded mp4 videos to generate preview thumbnails.</li>
+										<li>Validates account avatars for image content and crops to 100x100 pixels for smaller size.</li>
+										<li>Uses paginated comments and thumbnails in order to lighten load on server.</li>
+									</ul>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -64,8 +70,13 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Space Defender</h2>
+									<p>2D top-down space shooter with single and multiplayer modes.</p>
+									<ul>
+										<li>Generates particle effects with fade, random colors, speed, etc. for better graphics.</li>
+										<li>Enemy ship AI and tracking missiles update based on their nearest calculated target.</li>
+										<li>Rotates images using the object's velocity and stretches based on the collision size.</li>
+									</ul>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -76,8 +87,12 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>QtCrypt</h2>
+									<p>Native crypto utility designed to be minimalistic and simple.</p>
+									<ul>
+										<li>Lightweight, multithreaded GUI application written in C++, using the Qt framework.</li>
+										<li>Encrypts/decrypts files and directories using a symmetric key algorithm via libsodium.</li>
+									</ul>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
