Add screenshots and links for Skills.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<h2 class="projects">Projects</h2>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="https://cattube.herokuapp.com/" class="image"><img src="images/cattube_screenshot.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>CatTube</h2>
@@ -60,14 +60,15 @@
 										<li>Validates account avatars for image content and crops to 100x100 pixels for smaller size.</li>
 										<li>Uses paginated comments and thumbnails in order to lighten load on server.</li>
 									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<div class="buttons">
+										<a href="https://cattube.herokuapp.com/" class="button">Live</a>
+										<a href="https://github.com/trashctor/CatTube" class="button">GitHub</a>
+									</div>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="http://trashctor.github.io/Space-Defender/" class="image"><img src="images/space_defender_screenshot.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Space Defender</h2>
@@ -77,25 +78,26 @@
 										<li>Enemy ship AI and tracking missiles update based on their nearest calculated target.</li>
 										<li>Rotates images using the object's velocity and stretches based on the collision size.</li>
 									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<div class="buttons">
+										<a href="http://trashctor.github.io/Space-Defender/" class="button">Live</a>
+										<a href="https://github.com/trashctor/Space-Defender" class="button">GitHub</a>
+									</div>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="https://github.com/trashctor/QtCrypt" class="image"><img src="images/qtcrypt_logo.svg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>QtCrypt</h2>
-									<p>Native crypto utility designed to be minimalistic and simple.</p>
+									<p>Native crypto utility designed to be simple and minimalistic.</p>
 									<ul>
 										<li>Lightweight, multithreaded GUI application written in C++, using the Qt framework.</li>
 										<li>Encrypts/decrypts files and directories using a symmetric key algorithm via libsodium.</li>
 									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<div class="buttons">
+										<a href="https://github.com/trashctor/QtCrypt" class="button">GitHub</a>
+									</div>
 								</div>
 							</div>
 						</section>
