Finish up Contact section.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>Edward Lee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -38,8 +38,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Edward Lee</h1>
-							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or creating something cool, I'm a happy programmer. Because in the end, it's the ability to translate an idea straight from your imagination into reality that makes all the difference for me.</p>
+							<h1 class="section">Edward Lee</h1>
+							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or creating something cool, I'm a happy programmer. My experience includes C++, Ruby, JavaScript and the various libraries, tools, and frameworks associated with these languages. Read more about me below and enjoy your stay!</p>
 							<ul class="actions">
 								<li><a href="./assets/other/resume.pdf" class="button">Resume</a></li>
 							</ul>
@@ -48,12 +48,12 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-						<h2 class="projects">Projects</h2>
+						<h2 class="projects section">Projects</h2>
 						<section>
 							<a href="https://cattube.herokuapp.com/" class="image"><img src="images/cattube_screenshot.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>CatTube</h2>
+									<h3>CatTube</h3>
 									<p>A clone of YouTube focused on providing quality cat videos!</p>
 									<ul>
 										<li>Automatically screenshots uploaded mp4 videos to generate preview thumbnails.</li>
@@ -71,7 +71,7 @@
 							<a href="http://trashctor.github.io/Space-Defender/" class="image"><img src="images/space_defender_screenshot.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Space Defender</h2>
+									<h3>Space Defender</h3>
 									<p>2D top-down space shooter with single and multiplayer modes.</p>
 									<ul>
 										<li>Generates particle effects with fade, random colors, speed, etc. for better graphics.</li>
@@ -89,7 +89,7 @@
 							<a href="https://github.com/trashctor/QtCrypt" class="image"><img src="images/qtcrypt_logo.svg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>QtCrypt</h2>
+									<h3>QtCrypt</h3>
 									<p>Native crypto utility designed to be simple and minimalistic.</p>
 									<ul>
 										<li>Lightweight, multithreaded GUI application written in C++, using the Qt framework.</li>
@@ -106,7 +106,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Skills</h2>
+							<h2 class="section">Skills</h2>
 							<div class="skills-icons group">
 								<i class="devicon-c-plain"></i>
 								<i class="devicon-cplusplus-plain-wordmark"></i>
@@ -126,57 +126,28 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
+							<h2 class="section">Contact</h2>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<span>edwardleeru@gmail.com</span>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<h3>Location</h3>
+											<span>New York, NY 10003<br />
+												USA
+											</span>
 										</li>
 										<li>
-											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="mailto:edwardleeru@gmail.com" class="fa-envelope-o"><span class="label">Email</span></a></li>
+												<li><a href="https://github.com/trashctor" class="fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/edward-lee-76988a11a" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
 								</section>
-							</div>
 						</div>
 					</section>
 
@@ -186,7 +157,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2016 Edward Lee. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
