Add profile picture.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
+						<div class="inner fit">
+							<img class="profile" src="./images/profile.png">
 							<h1 class="section">Edward Lee</h1>
-							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or creating something cool, I'm a happy programmer. My experience includes C++, Ruby, JavaScript and the various libraries, tools, and frameworks associated with these languages. Read more about me below and enjoy your stay!</p>
+							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or making something cool, I'm a happy programmer. My experience includes C++, Ruby, JavaScript and more, as well as the various libraries, tools, and frameworks associated with these languages. Read more about me below and enjoy your stay!</p>
 							<ul class="actions">
 								<li><a href="./assets/other/resume.pdf" class="button">Resume</a></li>
 							</ul>
