Update after NSX.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<h1 class="section">Edward Lee</h1>
 							<p>I'm a software developer that's interested in a wide variety of topics and fields, ranging from video game development to creating the latest and greatest websites. As long as I'm learning something new or making something cool, I'm a happy programmer. My experience includes C++, Ruby, JavaScript and more, as well as the various libraries, tools, and frameworks associated with these languages. Read more about me below and enjoy your stay!</p>
 							<ul class="actions">
-								<li><a href="./assets/other/resume.pdf" class="button">Resume</a></li>
+								<li><a href="./assets/other/edward_lee_resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -59,8 +59,8 @@
 									<p>A clone of YouTube focused on providing quality cat videos!</p>
 									<ul>
 										<li>Automatically screenshots uploaded mp4 videos to generate preview thumbnails.</li>
+										<li>Queries the user's video history in order to create personalized recommendations.</li>
 										<li>Validates account avatars for image content and crops to 100x100 pixels for smaller size.</li>
-										<li>Uses paginated comments and thumbnails in order to lighten load on server.</li>
 									</ul>
 									<div class="buttons">
 										<a href="https://cattube.herokuapp.com/" class="button">Live</a>
@@ -110,11 +110,12 @@
 						<div class="inner">
 							<h2 class="section">Skills</h2>
 							<div class="skills-icons group">
-								<i class="devicon-c-plain"></i>
 								<i class="devicon-cplusplus-plain-wordmark"></i>
+								<i class="devicon-c-plain"></i>
 								<i class="devicon-ruby-plain-wordmark"></i>
-								<i class="devicon-rails-plain-wordmark"></i>
 								<i class="devicon-javascript-plain"></i>
+								<i class="devicon-python-plain-wordmark"></i>
+								<i class="devicon-rails-plain-wordmark"></i>
 								<i class="devicon-react-original-wordmark"></i>
 								<i class="devicon-jquery-plain-wordmark"></i>
 								<i class="devicon-html5-plain-wordmark"></i>
@@ -137,9 +138,7 @@
 										</li>
 										<li>
 											<h3>Location</h3>
-											<span>New York, NY 10003<br />
-												USA
-											</span>
+											<span>New York, NY 11354</span>
 										</li>
 										<li>
 											<ul class="icons">
@@ -159,7 +158,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; 2016 Edward Lee. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2017 Edward Lee. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
